@@ -38,6 +38,7 @@ v 8.11.0 (unreleased)
 
 v 8.10.3 (unreleased)
   - Fix hooks missing on imported GitLab projects
+  - Properly abort a merge when merge conflicts occur
 
 v 8.10.2
   - User can now search branches by name. !5144
